--- a/R/TravelSurvey.Rmd
+++ b/R/TravelSurvey.Rmd
@@ -1,7 +1,6 @@
 # Travel Survey Exploratory Analysis
 
 ```{r libs, eval = TRUE, echo = FALSE, results = "hide", warning = FALSE, error = FALSE, message = FALSE}
-options(repos='http://cran.rstudio.com/')
 library("tidyverse")
 library("ITHIM")
 library("TravelSurvey")
@@ -18,20 +17,28 @@ NHTS.df <- dplyr::left_join(NHTS.ts@person, NHTS.ts@trip, by = c("houseID","subj
 NHTS.df <- within(NHTS.df, {
     duration <- ifelse(is.na(duration), 0, duration)
     mode <- factor(mode, levels = c("walk","cycle","other"))
-}
-)
-
+})
 ```
 
 ## Mode share of walk/bike by MSA
 
 ```{r plot1, eval = TRUE, fig.width = 20, echo = FALSE}
-total <- NHTS.df %>% group_by(location) %>% summarise(total = sum(duration) )
-byMode <- NHTS.df %>% group_by(location, mode) %>% summarise(byMode = sum(duration) )
-NHTS.table1 <- dplyr::full_join(byMode, total, by = "location") %>% mutate(propMode = byMode/total) %>% dplyr::filter(mode %in% c("walk","cycle"))
+total <- NHTS.df %>% group_by(location) %>% summarise(mean = mean(duration), total = sum(duration), sdTotal = sd(duration), nTotal = n())
+
+byMode <- NHTS.df %>% group_by(location, mode) %>% summarise(byMode = mean(duration), sdMode = sd(duration), nMode=n() )
+NHTS.table1 <- dplyr::full_join(byMode, total, by = "location") %>% mutate(propMode = byMode/total) %>% dplyr::filter(mode %in% c("walk","cycle")) %>% mutate(ciModeLeft = byMode - 1.96*sdMode/sqrt(nMode), ciModeRight = byMode + 1.96*sdMode/sqrt(nMode))
 
 p <- ggplot(data = NHTS.table1, aes(x = location, y = propMode, fill = mode))
 p + geom_bar(stat="identity") + theme_bw()
+
+NHTS.table2 <- NHTS.table1 %>% select(location, mode, ciModeLeft, ciModeRight) %>% gather(ciMode, value, 3:4)
+NHTS.table2 <- within(NHTS.table2, {
+    location <- factor(location, levels=unique(location[order(value)]))
+    })
+
+p <- ggplot(NHTS.table2, aes(x = location, y = value, colour = mode))
+p + geom_line(aes(group = ciMode))# + facet_grid(mode ~ . )
+
 ```
 
 ## Distribution of Trip Duration by MSA
