--- a/R/TravelSurvey.Rmd
+++ b/R/TravelSurvey.Rmd
@@ -7,16 +7,26 @@ library("TravelSurvey")
 ```
 
 ```{r loadITHIM, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE, echo = FALSE}
-fig.width <- 6 # inches
+fig.width <- 24 # inches
 phi <- (1+sqrt(5))/2 # the golden ratio ;)
 ```
 
-```{r TravelSurvey, eval = compute, fig.width = fig.width, echo = FALSE}
+```{r msa, eval = TRUE, fig.width = fig.width, echo = FALSE}
+foo <- read.csv(file ="./../data/cbsatocountycrosswalk.csv", colClasses = "character")
+foo <- unique(foo[,c("msa","msaname")])
+msa <- foo$msa
+msaname <- foo$msaname
+names(msaname) <- msa
+
+```
+
+```{r TravelSurvey, eval = TRUE, fig.width = fig.width, echo = FALSE}
 NHTS.ts <- readRDS(file = "~/GHI/R/data/NHTS.TravelSurvey.rds")
 NHTS.df <- dplyr::left_join(NHTS.ts@person, NHTS.ts@trip, by = c("houseID","subjectID"))
 NHTS.df <- within(NHTS.df, {
     duration <- ifelse(is.na(duration), 0, duration)
     mode <- factor(mode, levels = c("walk","cycle","other"))
+    location <- msaname[location]
 })
 ```
 
@@ -29,7 +39,7 @@ byMode <- NHTS.df %>% group_by(location, mode) %>% summarise(byMode = mean(durat
 NHTS.table1 <- dplyr::full_join(byMode, total, by = "location") %>% mutate(propMode = byMode/total) %>% dplyr::filter(mode %in% c("walk","cycle")) %>% mutate(ciModeLeft = byMode - 1.96*sdMode/sqrt(nMode), ciModeRight = byMode + 1.96*sdMode/sqrt(nMode))
 
 p <- ggplot(data = NHTS.table1, aes(x = location, y = propMode, fill = mode))
-p + geom_bar(stat="identity") + theme_bw()
+p + geom_bar(stat="identity") + theme_bw() + theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 NHTS.table2 <- NHTS.table1 %>% select(location, mode, ciModeLeft, ciModeRight) %>% gather(ciMode, value, 3:4)
 NHTS.table2 <- within(NHTS.table2, {
@@ -37,7 +47,7 @@ NHTS.table2 <- within(NHTS.table2, {
     })
 
 p <- ggplot(NHTS.table2, aes(x = location, y = value, colour = mode))
-p + geom_line(aes(group = ciMode)) + facet_grid(mode ~ . )
+p + geom_line(aes(group = ciMode)) + facet_grid(mode ~ . ) + theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 ```
 
@@ -45,16 +55,16 @@ p + geom_line(aes(group = ciMode)) + facet_grid(mode ~ . )
 
 ```{r plot2, eval = TRUE, fig.width = fig.width, echo = FALSE, fig.asp = 1/phi}
 p <- ggplot(subset(NHTS.df,!is.na(mode)), aes(x = location, y = duration, fill = location))
-p + geom_boxplot(outlier.shape = NA) + ylim(0,60)
-p + geom_violin(scale = "width" ) + ylim(0,60)
+p + geom_boxplot(outlier.shape = NA) + ylim(0,60) + theme(axis.text.x = element_text(angle = 45, hjust = 1))
+p + geom_violin(scale = "width" ) + ylim(0,60) + theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 ### Distribution of Trip Duration for NY MSA (5602)
 
 ```{r plot3, eval = TRUE, echo = FALSE, fig.width = fig.width, fig.asp = 1/phi}
 p <- ggplot(subset(NHTS.df,!is.na(mode) & location == "5602"), aes(x = mode, y = duration, fill = mode))
-p + geom_boxplot(outlier.shape = NA) + ylim(0,60)
-p + geom_violin(scale = "width", adjust = 4 ) + ylim(0,60)
+p + geom_boxplot(outlier.shape = NA) + ylim(0,60) + theme(axis.text.x = element_text(angle = 45, hjust = 1))
+p + geom_violin(scale = "width", adjust = 4 ) + ylim(0,60) + theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 ```{r means, eval = TRUE, echo = FALSE, fig.width = fig.width, fig.asp = 1/phi}
