Cleaned up edits from vargo a little bit

--- a/R/oregon.Rmd
+++ b/R/oregon.Rmd
@@ -58,8 +58,9 @@ Suppose we wanted to create a scenario in which the mean cycling time
 and mean walking time are doubled.  We need only to change two means
 in the model and nothing else.  To do so we could avoid creating input
 files by simply updating the baseline object with a few new
-parameters.
-(note: this is the overall mean for the whole population. From this, _ITHIM_ will create means for each age & gender strata)
+parameters.  (note: this is the overall mean for the whole
+population. From this, _ITHIM_ will create means for each age & gender
+strata)
 
 First we need to know the name of the parameters we want to update.
 Currently the list of parameters resides in the help page for the
@@ -79,6 +80,7 @@ getMethodsITHIM()
 ```
 
 We'll store the vector of means in a variable called _meanVec_ and then view that vector.
+
 ```{r misc322, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE, echo = TRUE}
 meanVec <- getMeans(ITHIM.baseline)
 meanVec
@@ -91,7 +93,9 @@ meanWalkingTime <- meanVec$walk
 meanCyclingTime <- meanVec$cycle
 ```
 
-Next we'll create a list of the parameters we wish to change in our scenario. Recall, we're interested in a scenario that has double the mean walking time and double the mean cycling time of the baseline scenario.
+Next we'll create a list of the parameters we wish to change in our
+scenario. Recall,
+we're interested in a scenario that has double the mean walking time and double the mean cycling time of the baseline scenario.
 
 ```{r misc3242, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE, echo = TRUE}
 scenarioParameters <- list(muwt = 2*meanWalkingTime, muct = 2*meanCyclingTime)
@@ -113,7 +117,9 @@ getMeans(ITHIM.scenario)
 ## Physical Activity Component
 
 Once the baseline and scenario ITHIM objects are defined, we may
-compute the change in burden due to physical activity as follows. We provide a few examples to give you an idea of options for diseases and burden. 
+compute the change in burden due to physical activity as follows. We
+provide a few examples to give you an idea of options for diseases and
+burden.
 
 ```{r misc25, message = FALSE, eval = TRUE, warning = FALSE, error = TRUE, echo = TRUE}
 deltaBurden(ITHIM.baseline, ITHIM.scenario, dis = "all", bur = "deaths")
@@ -124,7 +130,8 @@ deltaBurden(ITHIM.baseline, ITHIM.scenario, dis = "Depression", bur = "daly")
 
 ## Active Travel Estimates for Portland (MSA 6442)
 
-We use the National Household Transportation Survey (NHTS) data stored as a _TravelSurvey_ R object to estimate mean walk and cycle times.
+We use the National Household Transportation Survey (NHTS) data stored
+as a _TravelSurvey_ R object to estimate mean walk and cycle times.
 
 ```{r oregon23, eval = TRUE, echo = FALSE, message = FALSE, warnings = FALSE, results = "hide", fig.width = fig.width, fig.asp = 1/phi}
 install_github("syounkin/TravelSurvey", ref="master")
@@ -152,8 +159,6 @@ activeTravelOregon <- right_join(sampleSize,tripDuration, by = c("sex","age")) %
 
 activeTravelOregon
 ```
-
-
 
 ## Appendix
 
@@ -187,9 +192,6 @@ Notes about file format:
 * The rows must be ordered by ageClass.
 * The mean values are in minutes per week
 
-
-
-
 #### Disease Burden File Format
 
 The disease burden file contains estimates for disease burden
@@ -212,8 +214,6 @@ Notes about file format:
   "ColonCancer", "CVD", "Dementia", "Diabetes", "Depression" and "RTIs"
 
 
-
-### Road Injuries
 #### Road Injuries File Format
 
 If road injury data is present it can be included in the same manner.
